[gd_scene load_steps=6 format=3 uid="uid://jjjb8m4rx37m"]

[ext_resource type="Theme" uid="uid://cuognvkm850tx" path="res://assets/themes/ui_theme.tres" id="1_gjayl"]
[ext_resource type="Script" path="res://scripts/ui/save_system/slot_selection.gd" id="2_ds3mf"]
[ext_resource type="PackedScene" uid="uid://b4goedwokmaph" path="res://scenes/ui/menu_cursor.tscn" id="4_0i80v"]
[ext_resource type="PackedScene" uid="uid://b5wsbousnpwq4" path="res://scenes/ui/save_system/warning_dialog.tscn" id="5_xhaur"]
[ext_resource type="PackedScene" uid="uid://cd62cxexqucln" path="res://scenes/components/basic_ui_nav_component.tscn" id="6_njv8q"]

[node name="SlotSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gjayl")
script = ExtResource("2_ds3mf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SlotSelectionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -509.0
offset_top = -251.5
offset_right = 509.0
offset_bottom = 251.5
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SlotSelectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="VSlotContainer" type="VBoxContainer" parent="SlotSelectionPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WarningDialog" parent="." instance=ExtResource("5_xhaur")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MenuCursor" parent="." instance=ExtResource("4_0i80v")]
unique_name_in_owner = true
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
menu_parent_path = NodePath("../SlotSelectionPanel/ScrollContainer/VSlotContainer")

[node name="BasicUiInputComponent" parent="." instance=ExtResource("6_njv8q")]
previous_scene = "res://scenes/ui/main_menu.tscn"
